--- a/index.html
+++ b/index.html
@@ -1,239 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>TomX | Roblox Builder Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TomX | Donut - Professional Roblox Builder</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        :root {
+            --primary: #ffaa00;
+            --bg: #0a0a0b;
+            --card-bg: #16161a;
+            --text: #ffffff;
+            --text-secondary: #a0a0a5;
+        }
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+        * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, sans-serif; }
 
-<style>
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Inter', sans-serif;
-}
+        body { background-color: var(--bg); color: var(--text); overflow-x: hidden; }
 
-body {
-    background: #0f0f0f;
-    color: white;
-    overflow-x: hidden;
-}
+        /* Smooth reveal animation */
+        .reveal { opacity: 0; transform: translateY(30px); transition: 0.8s all ease; }
+        .reveal.active { opacity: 1; transform: translateY(0); }
 
-section {
-    padding: 100px 10%;
-}
+        /* Header / Hero Section */
+        header {
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            background: radial-gradient(circle at center, #1e1e26 0%, #0a0a0b 100%);
+        }
 
-h1, h2 {
-    font-weight: 800;
-}
+        .hero-title { font-size: 4rem; letter-spacing: -2px; margin-bottom: 10px; }
+        .hero-title span { color: var(--primary); }
+        .hero-subtitle { font-size: 1.2rem; color: var(--text-secondary); max-width: 600px; }
 
-p {
-    color: #aaa;
-    line-height: 1.6;
-}
+        /* Gallery Slider */
+        .section { padding: 80px 10%; }
+        .slider-container {
+            position: relative;
+            max-width: 900px;
+            margin: 40px auto;
+            overflow: hidden;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+        }
 
-/* HERO */
-.hero {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    animation: fadeIn 1.5s ease;
-}
+        .slides { display: flex; transition: transform 0.5s ease-in-out; }
+        .slide { min-width: 100%; height: 500px; object-fit: cover; }
 
-.hero h1 {
-    font-size: 4rem;
-    background: linear-gradient(90deg, #ffae00, #ff0066);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
+        .nav-btn {
+            position: absolute; top: 50%; transform: translateY(-50%);
+            background: rgba(255,255,255,0.1); border: none; color: white;
+            padding: 15px; cursor: pointer; border-radius: 50%; backdrop-filter: blur(5px);
+        }
+        .prev { left: 20px; } .next { right: 20px; }
+        .nav-btn:hover { background: var(--primary); }
 
-.hero span {
-    font-size: 1.2rem;
-    color: #ccc;
-}
+        /* Skills Grid */
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 40px; }
+        .card { background: var(--card-bg); padding: 30px; border-radius: 12px; border-bottom: 3px solid transparent; transition: 0.3s; }
+        .card:hover { border-bottom: 3px solid var(--primary); transform: translateY(-5px); }
+        .card i { font-size: 2.5rem; color: var(--primary); margin-bottom: 15px; }
 
-/* ABOUT */
-.about {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    animation: slideUp 1.5s ease;
-}
-
-/* GALLERY */
-.gallery {
-    position: relative;
-    max-width: 100%;
-    margin-top: 50px;
-}
-
-.slider {
-    display: flex;
-    overflow: hidden;
-    position: relative;
-}
-
-.slide {
-    min-width: 100%;
-    transition: transform 0.6s ease-in-out;
-}
-
-.slide img {
-    width: 100%;
-    border-radius: 15px;
-    box-shadow: 0 20px 40px rgba(0,0,0,0.6);
-}
-
-.buttons {
-    position: absolute;
-    width: 100%;
-    top: 50%;
-    display: flex;
-    justify-content: space-between;
-    transform: translateY(-50%);
-}
-
-.buttons button {
-    background: rgba(0,0,0,0.6);
-    border: none;
-    color: white;
-    font-size: 2rem;
-    padding: 10px 20px;
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-.buttons button:hover {
-    background: #ff0066;
-}
-
-/* SKILLS */
-.skills {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 30px;
-    margin-top: 50px;
-}
-
-.skill-card {
-    background: #1a1a1a;
-    padding: 30px;
-    border-radius: 15px;
-    transition: 0.4s;
-}
-
-.skill-card:hover {
-    transform: translateY(-10px);
-    background: #222;
-}
-
-/* ANIMATIONS */
-@keyframes fadeIn {
-    from {opacity: 0;}
-    to {opacity: 1;}
-}
-
-@keyframes slideUp {
-    from {transform: translateY(40px); opacity: 0;}
-    to {transform: translateY(0); opacity: 1;}
-}
-
-footer {
-    text-align: center;
-    padding: 40px;
-    color: #666;
-}
-</style>
+        footer { text-align: center; padding: 40px; color: var(--text-secondary); border-top: 1px solid #222; }
+    </style>
 </head>
 <body>
 
-<section class="hero">
-    <h1>TomX</h1>
-    <span>aka donut • Roblox Builder & FPS Map Designer</span>
-</section>
+    <header>
+        <h1 class="hero-title">TomX <span>.</span></h1>
+        <p class="hero-subtitle">Professional Roblox Builder & 3D Environment Artist with 4 years of experience. Specializing in high-quality FPS maps and Blender environments.</p>
+    </header>
 
-<section class="about">
-    <h2>About Me</h2>
-    <p>
-        I'm TomX, also known as donut — a professional Roblox developer with over 4 years of experience.
-        I specialize in studio-quality building and competitive FPS map design inspired by games like Rivals.
-        My expertise covers realistic environments, optimized competitive layouts, and high-quality Blender modeling.
-    </p>
-    <p>
-        I focus on clean topology, performance optimization, strong map flow, and immersive design.
-        Whether it's stylized builds, FPS arenas, or custom high-quality assets — I deliver professional results.
-    </p>
-</section>
-
-<section>
-    <h2>Featured Work</h2>
-
-    <div class="gallery">
-        <div class="slider" id="slider">
-            <div class="slide"><img src="images/build1.jpg" alt=""></div>
-            <div class="slide"><img src="images/build2.jpg" alt=""></div>
-            <div class="slide"><img src="images/fps1.jpg" alt=""></div>
-            <div class="slide"><img src="images/fps2.jpg" alt=""></div>
-            <div class="slide"><img src="images/blender1.jpg" alt=""></div>
+    <section class="section reveal">
+        <h2 style="text-align:center; font-size: 2.5rem;">Featured Projects</h2>
+        <p style="text-align:center; color: var(--text-secondary);">Inspired by titles like Rivals and competitive shooters.</p>
+        
+        <div class="slider-container">
+            <div class="slides" id="slider">
+                <img src="images/project1.png" class="slide" alt="FPS Map 1">
+                <img src="images/project2.png" class="slide" alt="Environment 2">
+                <img src="images/project3.png" class="slide" alt="Blender Model 3">
+                <img src="images/project4.png" class="slide" alt="Studio Build 4">
+            </div>
+            <button class="nav-btn prev" onclick="moveSlide(-1)"><i class="fas fa-chevron-left"></i></button>
+            <button class="nav-btn next" onclick="moveSlide(1)"><i class="fas fa-chevron-right"></i></button>
         </div>
+    </section>
 
-        <div class="buttons">
-            <button onclick="prevSlide()">❮</button>
-            <button onclick="nextSlide()">❯</button>
+    <section class="section reveal">
+        <h2 style="margin-bottom: 40px;">Expertise</h2>
+        <div class="grid">
+            <div class="card">
+                <i class="fas fa-crosshairs"></i>
+                <h3>FPS Level Design</h3>
+                <p>Specialized in competitive layouts, flow optimization, and high-fidelity aesthetics similar to Rivals.</p>
+            </div>
+            <div class="card">
+                <i class="fas fa-cube"></i>
+                <h3>Blender Workflow</h3>
+                <p>High-quality mesh modeling, texturing, and optimized exports for performance-heavy games.</p>
+            </div>
+            <div class="card">
+                <i class="fas fa-tools"></i>
+                <h3>Studio Building</h3>
+                <p>4 years of experience in Roblox Studio. Advanced lighting, terrain, and atmospheric effects.</p>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<section>
-    <h2>Skills</h2>
-    <div class="skills">
-        <div class="skill-card">
-            <h3>Studio Building</h3>
-            <p>Advanced environment design, realistic lighting, optimized geometry.</p>
-        </div>
-        <div class="skill-card">
-            <h3>FPS Map Design</h3>
-            <p>Competitive flow, strategic angles, balanced layouts inspired by Rivals-style gameplay.</p>
-        </div>
-        <div class="skill-card">
-            <h3>Blender Modeling</h3>
-            <p>High-quality custom meshes, props, and detailed assets.</p>
-        </div>
-        <div class="skill-card">
-            <h3>Optimization</h3>
-            <p>Performance-focused building with clean structure and efficient asset usage.</p>
-        </div>
-    </div>
-</section>
+    <footer>
+        <p>Contact me via Discord: <b>donut_dev</b> (TomX)</p>
+        <p style="margin-top: 10px; font-size: 0.8rem;">&copy; 2026 TomX Portfolio. All rights reserved.</p>
+    </footer>
 
-<footer>
-    © 2026 TomX (donut) • Roblox Developer Portfolio
-</footer>
+    <script>
+        // Slider Logic
+        let index = 0;
+        function moveSlide(step) {
+            const slides = document.getElementById('slider');
+            const total = document.querySelectorAll('.slide').length;
+            index = (index + step + total) % total;
+            slides.style.transform = `translateX(${-index * 100}%)`;
+        }
 
-<script>
-let currentIndex = 0;
+        // Scroll Reveal Logic
+        window.addEventListener('scroll', () => {
+            const reveals = document.querySelectorAll('.reveal');
+            reveals.forEach(el => {
+                let windowHeight = window.innerHeight;
+                let revealTop = el.getBoundingClientRect().top;
+                if (revealTop < windowHeight - 100) el.classList.add('active');
+            });
+        });
 
-function showSlide(index) {
-    const slider = document.getElementById("slider");
-    const slides = document.querySelectorAll(".slide");
-    if (index >= slides.length) currentIndex = 0;
-    else if (index < 0) currentIndex = slides.length - 1;
-    else currentIndex = index;
-
-    slider.style.transform = `translateX(-${currentIndex * 100}%)`;
-}
-
-function nextSlide() {
-    showSlide(currentIndex + 1);
-}
-
-function prevSlide() {
-    showSlide(currentIndex - 1);
-}
-</script>
-
+        // Trigger reveal on load
+        window.dispatchEvent(new Event('scroll'));
+    </script>
 </body>
 </html>
