--- a/index.html
+++ b/index.html
@@ -155,23 +155,23 @@
 
         <div class="stack-container" id="cardStack">
             <div class="card">
-                <img src="images/project5.png" alt="Map 5">
+                <img src="images/RobloxScreenShot20251004_133926917.png" alt="Map 5">
                 <div class="card-label">Competitive FPS Arena</div>
             </div>
             <div class="card">
-                <img src="images/project4.png" alt="Map 4">
+                <img src="images/RobloxScreenShot20251004_133956285.png" alt="Map 4">
                 <div class="card-label">Blender Environment Design</div>
             </div>
             <div class="card">
-                <img src="images/project3.png" alt="Map 3">
+                <img src="images/RobloxScreenShot20260213_202217913.png" alt="Map 3">
                 <div class="card-label">Rivals Style Layout</div>
             </div>
             <div class="card">
-                <img src="images/project2.png" alt="Map 2">
+                <img src="images/RobloxScreenShot20260213_202318044.png" alt="Map 2">
                 <div class="card-label">High-Poly Showcase</div>
             </div>
             <div class="card">
-                <img src="images/project1.png" alt="Map 1">
+                <img src="images/RobloxScreenShot20260213_202307612.png" alt="Map 1">
                 <div class="card-label">Latest FPS Project</div>
             </div>
         </div>
